Re-structure Part 7: Documentation update.