@@ -1,7 +1,7 @@
 package com.loadero.http;
 
 import com.loadero.Loadero;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import org.apache.http.Header;
 import org.apache.http.HttpHeaders;
@@ -10,11 +10,11 @@ import org.apache.http.message.BasicHeader;
 
 final class LoaderoHttpClient extends HttpClientBuilder {
     LoaderoHttpClient() {
-        List<Header> headers = new ArrayList<>(List.of(
+        List<Header> headers = Arrays.asList(
             new BasicHeader(HttpHeaders.ACCEPT, "application/json"),
             new BasicHeader(HttpHeaders.CONTENT_TYPE, "application/json"),
             new BasicHeader(HttpHeaders.AUTHORIZATION, "LoaderoAuth " + Loadero.getToken())
-        ));
+        );
         setDefaultHeaders(headers);
     }
 }
